# light_photo_analyzer

./: .gitignore  Procfile  README.md  requirements.txt  setup.cfg  todo.md
images/: 20220618120354.rsp  20220618121930.hdr  20220618133350.hdr  20220618133350.rsp
lpa/: light_photo_analyzer.py
lpa/static/: dropzone.css  style.css
lpa/static/js/: config_fc.js  dropzone.js  luminance.js  plot_heatmap.js  plot_rsp.js  upload.js
lpa/templates/: falsecolor.html  layout.html  results.html  upload.html
