[metadata]
name = light_photo_analyzer

license = MIT

[options]
include_package_data = True
package_dir = =lpa
packages = find:
python_requires = >=3.9
install_requires =
    flask
    Pillow
    gunicorn


[options.package_data]
* = *.html, *.js, *.css, *.gif, *.ico, *.svg

[options.packages.find]
where = lpa
